src/components/collection/card/CollectionCard.less
@import '../../../../resources/styles/_antd-theme.less';
@import '../../../../resources/styles/_animations';

.collection-card {
  animation: slide-in 0.5s 0s both;
  .animation-delay(10);

  min-height: 335px;
  margin-top: 20px;
  padding: 20px;
  border-radius: 8px;
  background-color: @shade-2;
  position: relative;

  &.clickable {
    cursor: pointer;
  }

  .top-right-icon {
    position: absolute;
    top: 20px;
    right: 20px;

    font-size: 20px;
    color: @btn-primary-bg;
    cursor: pointer;
  }

  .tags-container {
    margin: 5px 0 10px;
    min-height: 38px;
  }

  .subject-tag {
    background-color: @shade-1;
  }

  &.tiny {
    min-height: 290px;
    padding: 20px 20px 20px;
    display: flex;
    flex-direction: column;
    align-content: space-between;

    .highlight {
      .last-updated {
        display: none;
      }
    }
  }

  &.skeleton {
    background-color: white;
    border: 1px solid #eeeeee;
    .ant-skeleton-title {
      width: 400px;
    }

    .ant-skeleton-avatar {
      margin: 29px 0px;
    }

    .collection-video-preview {
      display: flex;
    }

    &.tiny {
      .ant-skeleton-title {
        width: 200px;
        margin-bottom: 20px;
      }

      .ant-skeleton-avatar {
        margin: 0px;
      }
    }
  }
}

